--- a/jquery.atAccordionOrTabs.css
+++ b/jquery.atAccordionOrTabs.css
@@ -16,7 +16,7 @@
 
 .at-accordion-or-tabs {
 	position: relative;
-	margin: 24px auto;
+	/* margin: 24px auto; */
 	border: none;
 	width: 100%;
 	padding: 0;
